fix footer content alignment

--- a/src/components/fixed-btn/FixedBtn.css
+++ b/src/components/fixed-btn/FixedBtn.css
@@ -6,6 +6,7 @@
     width: fit-content;
     margin: 1rem 0;
     cursor: pointer;
+    gap: 1rem;
 }
 
 .fixed-btn-container {
@@ -49,23 +50,27 @@
 .fixed-btn-icon {
     position: absolute;
     left: -0.2rem;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
 }
 
 @media only screen and (max-width: 600px){
     .fixed-btn-container {
         position: fixed;
         top: 14rem;
-        left: 70%;
+        left: 65%;
         transform: translateX(-50%);
         display: flex;
         flex-direction: column;
 }  
-
+.fixed-btn-icon {
+    position: absolute;
+    left: -0.3rem;
+    font-size: 2.9rem;
+}
 
 .btn {
     font-size: 1.3rem; 
-    width: 42vw;
+    width: 52vw;
     letter-spacing: 1.1px;
 }
 }
