--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -52,6 +52,7 @@ display: flex;
 flex-direction: column;
 gap: 0.8rem;
 position: relative;
+width: 55%;
 }
 
 .services-title {
@@ -98,7 +99,7 @@ h1 {
     position: absolute;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     border-radius: 2px;
-    width: 100%;
+    
 }
 
 .service-descriptions.show {
